# alfred-workflows

./: .gitignore  README.md  pyproject.toml
emv-tools/: entrypoint.py
emv-tools/emvtools/: __init__.py  tags.py
hex-tools/: entrypoint.py  info.plist
hex-tools/hextools/: __helpers.py  __init__.py  base.py  numval.py
hex-tools/tests/: test_base.py  test_numval.py  test_parse.py
