[tool.poetry]
name = "alfred-workflows"
version = "1.0.0"
description = "Collection of multiple Alfred workflows to improve productivity"
authors = ["Paulo Avelar <pauloavelar123@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
coverage = "^7.3.2"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
command_line = "-m pytest"
omit = [ "*/tests/*" ]

[tool.coverage.report]
ignore_errors = true

[tool.coverage.html]
directory = ".covreport"
